playing-with-Istio/02.istio-01.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "peer-policy"
  namespace: "demo"
spec:
  selector:
    matchLabels:
      app: service-a
  mtls:
    mode: STRICT
