playing-with-Istio/05.k8s.yaml
---
# Deploy 'service-a-v1-1-0-deployment' Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-v1-1-0-deployment
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
      version: 1.1.0
      api: acme-api
  template:
    metadata:
      labels:
        app: service-a
        version: 1.1.0
        api: acme-api
    spec:
      serviceAccountName: service-a
      containers:
      - name: service-a
        image: patrice1972/service-a:1.1.0
        ports:
        - name: service-a-port
          protocol: TCP
          containerPort: 3000
