playing-with-Istio/01.demo.k8s.yaml
---
# Namespace: istio-demo
apiVersion: v1
kind: Namespace
metadata:
  name: istio-demo
---
# Deployment: service-a-v1-0-0-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-v1-0-0-deployment
  namespace: istio-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
      version: 1.0.0
      host: acme-api
  template:
    metadata:
      labels:
        app: service-a
        version: 1.0.0
        host: acme-api
    spec:
      serviceAccountName: service-a
      containers:
      - name: service-a
        image: patrice1972/demo-service-a:1.0.0
        ports:
        - name: service-a-port
          protocol: TCP
          containerPort: 3000
---
# Service: acme-api
apiVersion: v1
kind: Service
metadata:
  name: acme-api
  namespace: istio-demo
spec:
  selector:
    host: acme-api
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
# Deployment: client-x-v1-0-0-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-x-v1-0-0-deployment
  namespace: istio-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-x
      version: 1.0.0
  template:
    metadata:
      labels:
        app: client-x
        version: 1.0.0
    spec:
      serviceAccountName: client-x
      containers:
      - name: client-x
        image: patrice1972/demo-client-x:1.0.0
