playing-with-Istio/02.deny-all.istio.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: peer-policy
  namespace: istio-demo
spec:
  selector:
    matchLabels:
      app: service-a
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: istio-demo
spec: {}
