playing-with-Istio/03.allow.istio.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-client-x-to-service-a-through-alpha-api-routes
  namespace: istio-demo
spec:
  selector:
    matchLabels:
      app: service-a
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
        paths: ["/path-01"]
  - from:
    - source:
        principals: ["cluster.local/ns/istio-demo/sa/client-u"]
    - source:
        namespaces: ["istio-demo"]
