playing-with-Istio/03.istio-02.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: demo
spec: {}
