playing-with-Istio/04.istio-03.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-client-x-to-service-a-through-alpha-api-routes
 namespace: demo
spec:
  selector:
    matchLabels:
      app: service-a
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
        paths: ["/path-01"]
  - from:
    - source:
        principals: ["cluster.local/ns/demo/sa/client-u"]
    - source:
        namespaces: ["demo"]
